tests/unit/default/syntax-error/057-create-table-parens-name-colon-type-parenses.e.t
---- IN ----
+%table(id:decimal()
---- OUT ----
---- ERR ----
syntax: expected `)` after `...:decimal()` instead of EOL at position 20 - at line 1
---- EXIT ----
1
